# ocaml-type-debugger

./: Makefile.common  README.md  dune  dune-project  infer.ml  infertypes.ml  main.ml  main2.ml  otp.opam  pre_inited  preinit.ml  test.ml
.github/workflow/: act.yml
boot/menhir/: menhirLib.ml  menhirLib.mli
file_formats/: cmi_format.ml  cmo_format.mli  cmt_format.ml  cmt_format.mli  cmx_format.mli  linear_format.mli
lib/: ast.ml  dune  infer.ml  infertypes.ml  parser.ml  preinit.ml
parsing/: ast_helper.ml  ast_helper.mli  ast_invariants.ml  ast_iterator.ml  ast_mapper.ml  ast_mapper.mli  asttypes.mli  builtin_attributes.ml  builtin_attributes.mli  depend.ml  depend.mli  docstrings.ml  docstrings.mli  lexer.mli  location.ml  location.mli  longident.mli  parse.ml  parse.mli  parsetree.mli  pprintast.ml  pprintast.mli  printast.ml  printast.mli  syntaxerr.ml  syntaxerr.mli
runtime/caml/: dune
test/: dune  pre_inited  test.ml  test1  test1.t  test2  test3  test4
tools/: caml_tex.ml  dumpobj.ml  dune  eqparsetree.ml  lintapidiff.ml  objinfo.ml  ocamlcmt.ml  ocamlcp.ml  ocamlmklib.ml  ocamloptp.ml  ocamlprof.ml  primreq.ml  profiling.ml  profiling.mli
typing/: btype.ml  btype.mli  ctype.ml  ctype.mli  datarepr.ml  datarepr.mli  env.ml  env.mli  envaux.mli  ident.ml  ident.mli  includeclass.ml  includeclass.mli  includecore.ml  includecore.mli  includemod.ml  includemod.mli  mtype.ml  mtype.mli  oprint.ml  oprint.mli  outcometree.mli  parmatch.ml  parmatch.mli  path.ml  path.mli  patterns.ml  patterns.mli  persistent_env.ml  persistent_env.mli  predef.ml  predef.mli  primitive.ml  primitive.mli  printpat.ml  printpat.mli  printtyp.ml  printtyp.mli  printtyped.ml  rec_check.ml  (+31 more)
utils/: arg_helper.ml  arg_helper.mli  build_path_prefix_map.ml  build_path_prefix_map.mli  clflags.ml  clflags.mli  config.ml  config.mli  identifiable.ml  identifiable.mli  misc.ml  misc.mli  numbers.ml  numbers.mli  profile.ml  terminfo.ml  terminfo.mli  warnings.ml  warnings.mli
