(env
 (dev
  (flags
   (:standard -warn-error -A -w -3-9-32-34-58)))
 (release
  (flags
   (:standard -warn-error -A -w -58))))

(executable
 (name main)
 (package otp)
 (public_name main)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (modules test main infertypes infer)
 (libraries stdio ocaml-compiler-libs.common))
